--- a/infrastructure-charts/values.yaml
+++ b/infrastructure-charts/values.yaml
@@ -65,4 +65,4 @@ charts:
     valueFile: "value-files/admin-dashboard/values.yaml"
   elastic-stack:
     namespace: monitoring
-    targetRevision: "7.17.3-route-bugfix"
+    targetRevision: "7.17.4"
